      before handing it to debconf.
    - Comment out language choices Catalan, Chinese (Simplified),
      Chinese (Traditional), Croatian, Hebrew and Icelandic,
      as the translated options are not up to date.
    - Correct spelling of Icelandic.
    - Add code to make it easy to test using locale name prefix in
      the language list.
  * Murat Demirten
    - Updated Turkush text.
  * Denis Barbier
    - Recoded Turkish text from ISO-8859-9 to UTF-8.
  * Jordi Mallach
    - Update Catalan text.

 -- Petter Reinholdtsen <pere@debian.org>  Thu, 23 Oct 2003 09:35:47 +0200

languagechooser (1.0) unstable; urgency=low

  * Denis Barbier
    - Let mktemplates remove comments from templates-in
  * Bart Cornelis
    - removed period at end of translated string (thanks to Bas Zoetekouw)
  * Joey Hess
    - Put the comments back in templates-in
  * Matt Kraai
    - Do not set the title.
  * Petter Reinholdtsen
    - Update language option for Esperanto, text
      from Edmund Grimley Evans.
    - Set version to 1.0.  I believe languagechooser have all the
      features it need, and only need more language choices.

 -- Petter Reinholdtsen <pere@debian.org>  Sat, 18 Oct 2003 23:54:11 +0200

languagechooser (0.37) unstable; urgency=low

  * Christian Perrier
    - Slightly change French wording
  * Petter Reinholdtsen  
    - Add support for lithuanian (lt_LT), patch from Kęstutis Biliūnas
  * Joey Hess
    - Remove the comment at the end of template-in. pos-debconf does not strip
      it for some reaosn, and this produces a corrupt file in the udeb.
      (See bug #215985)

 -- Joey Hess <joeyh@debian.org>  Mon, 13 Oct 2003 21:46:52 +0200

languagechooser (0.36) unstable; urgency=low

  * Make menu item template to avoid warning from main-menu every time
    it display the menu.

 -- Sebastian Ley <ley@debian.org>  Sun, 12 Oct 2003 19:34:25 +0200

languagechooser (0.35) unstable; urgency=low

  * Make sure the translated language choices are sorted when